controllerTest fixes: added vet role tests